[package]
name = "rust-mavlink-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true

[dependencies]
# tokio = { version = "1", features = [ "rt", "macros" ] }

[dependencies.mavlink]
# version = "0.11"
path = "./rust-mavlink"
default-features = false
features = [
	"std",
	"tcp",
	"udp",
	"direct-serial",
	"serial",
	"common",
	"emit-extensions",
]
